--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3.1\n"
+"X-Generator: Poedit 2.4\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -1012,6 +1012,9 @@ msgstr ""
 msgid "Smooth"
 msgstr ""
 
+msgid "Undiff"
+msgstr ""
+
 msgid "Weight Paint"
 msgstr ""
 
@@ -1860,6 +1863,9 @@ msgid "Create New Slider"
 msgstr ""
 
 msgid "You can only edit the base shape when all sliders are zero. Do you wish to set all sliders to zero now?  Note, use the pencil button next to a slider to enable editing of that slider's morph."
+msgstr ""
+
+msgid "You can only use the undiff brush while editing a slider. Note, use the pencil button next to a slider to enable editing of that slider's morph."
 msgstr ""
 
 msgid "Creating project '%s'..."
