--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4\n"
+"X-Generator: Poedit 2.4.1\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -231,7 +231,7 @@ msgstr ""
 msgid "Save Changes"
 msgstr ""
 
-msgid "Do you really want to close the group manager? All unsaved changes will be lost."
+msgid "Save changes to group file?"
 msgstr ""
 
 msgid "Batch Build"
