--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-KeywordsList: _\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -250,12 +250,8 @@ msgstr "<< Hinzufügen"
 msgid "Save Changes"
 msgstr "Änderungen speichern"
 
-msgid ""
-"Do you really want to close the group manager? All unsaved changes will be "
-"lost."
-msgstr ""
-"Wollen Sie den Gruppenmanager wirklich schließen? Alle nicht gespeicherten "
-"Änderungen gehen verloren."
+msgid "Save changes to group file?"
+msgstr "Änderungen in Gruppen-Datei speichern?"
 
 msgid "Batch Build"
 msgstr "Batch-Erstellung"
