--- a/lang/BodySlide.pot
+++ b/lang/BodySlide.pot
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 2.4.2\n"
 "Language: en\n"
 "X-Poedit-KeywordsList: _\n"
 
@@ -2653,4 +2653,13 @@ msgid "Axis"
 msgstr ""
 
 msgid "No Squeeze"
+msgstr ""
+
+msgid "Copy from shape..."
+msgstr ""
+
+msgid "Choose shape"
+msgstr ""
+
+msgid "Please choose a shape to copy from"
 msgstr ""
