--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -1057,14 +1057,14 @@ msgid "Vertex Edit\tQ"
 msgstr "Vertex Bearbeitung\tQ"
 
 msgid ""
-"Lets you select vertices to add to or remove from the mask.\n"
-"Click on a vertex to select/unmask it.\n"
-"Hold down CTRL to unselect/mask it."
+"Shows vertex points and lets you mask/unmask them.\n"
+"Without any brush active, click on a vertex to unmask it.\n"
+"Hold down CTRL to mask it."
 msgstr ""
-"Ermöglicht es, Vertices auszuwählen, um sie so der Maske hinzuzufügen oder "
-"zu entfernen.\n"
-"Auf einen Vertex klicken, um ihn auszuwählen/zu demaskieren.\n"
-"CTRL gedrückt halten, um ihn abzuwählen/zu maskieren."
+"Zeigt Vertexpunkte und ermöglicht es, diese zur Maske hinzuzufügen oder zu "
+"entfernen.\n"
+"Ohne einen aktiven Pinsel auf einen Vertex klicken, um ihn zu demaskieren.\n"
+"STRG gedrückt halten, um ihn zu maskieren."
 
 msgid "Increase Brush Size\tShift++"
 msgstr "Pinselgröße erhöhen\tShift++"
