--- a/lang/de/BodySlide.po
+++ b/lang/de/BodySlide.po
@@ -3654,14 +3654,14 @@ msgid ""
 "The vertex or triangle limit for '%s' was exceeded.\n"
 "Remaining data was dropped.\n"
 "\n"
-"Vertices (current/max): %d/%zu\n"
-"Triangles (current/max): %d/%zu"
+"Vertices (current/max): %zu/%zu\n"
+"Triangles (current/max): %zu/%zu"
 msgstr ""
 "Das Vertex- oder Triangle Limit für '%s' wurde überschritten.\n"
 "Die übrigen Daten wurden entfernt.\n"
 "\n"
-"Vertices (current/max): %d/%zu\n"
-"Triangles (current/max): %d/%zu"
+"Vertices (current/max): %zu/%zu\n"
+"Triangles (current/max): %zu/%zu"
 
 #: src/program/OutfitProject.cpp:3735
 msgid ""
