--- a/lang/fr/BodySlide.po
+++ b/lang/fr/BodySlide.po
@@ -3697,14 +3697,14 @@ msgid ""
 "The vertex or triangle limit for '%s' was exceeded.\n"
 "Remaining data was dropped.\n"
 "\n"
-"Vertices (current/max): %d/%zu\n"
-"Triangles (current/max): %d/%zu"
+"Vertices (current/max): %zu/%zu\n"
+"Triangles (current/max): %zu/%zu"
 msgstr ""
 "La limite de vertex ou de triangles pour '%s' a été dépassée.\n"
 "Les données restantes ont été abandonnées.\n"
 "\n"
-"Vertices (actuels/maximaux): %d/%zu\n"
-"Triangles (actuels/maximaux): %d/%zu"
+"Vertices (actuels/maximaux): %zu/%zu\n"
+"Triangles (actuels/maximaux): %zu/%zu"
 
 #: src/program/OutfitProject.cpp:3743
 msgid ""
