--- a/lang/tr/BodySlide.po
+++ b/lang/tr/BodySlide.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-06-21 22:07+0200\n"
+"PO-Revision-Date: 2021-07-30 17:39+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 3.0\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -2159,8 +2159,8 @@ msgstr "Kıyafet yükleniyor..."
 msgid "Creating outfit..."
 msgstr "Kıyafet oluşturma..."
 
-msgid "Creating %d slider(s)..."
-msgstr "Kaydırıcı(lar) %d oluşturuluyor..."
+msgid "Creating %zu slider(s)..."
+msgstr "Kaydırıcı(lar) %zu oluşturuluyor..."
 
 msgid "Select a slider set to load"
 msgstr "Yüklemek için bir kaydırıcı seç"
