--- a/lang/zh/BodySlide.po
+++ b/lang/zh/BodySlide.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BodySlide_zh\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-05-08 18:25+0200\n"
+"PO-Revision-Date: 2021-07-30 17:39+0200\n"
 "Last-Translator: \n"
 "Language-Team: 小莫\n"
 "Language: zh\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 3.0\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-SearchPath-0: BodySlide.po\n"
@@ -2013,8 +2013,8 @@ msgstr "载入装备..."
 msgid "Creating outfit..."
 msgstr "创建装备..."
 
-msgid "Creating %d slider(s)..."
-msgstr "创建%d滑块..."
+msgid "Creating %zu slider(s)..."
+msgstr "创建%zu滑块..."
 
 msgid "Select a slider set to load"
 msgstr "选择加载一个滑块设置"
